# colcon_env_hook_depend_reproduction

./: README.md
bar/: CMakeLists.txt  package.xml
bar/test/: test_bar.py
foo/: CMakeLists.txt  package.xml
foo/env_hook/: popcorn.dsv
