<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bar</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jacob@openrobotics.org">jacob</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- We depend on foo in many ways -->
  <build_depend>foo</build_depend>
  <exec_depend>foo</exec_depend>
  <test_depend>foo</test_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
